--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
         <div class="collapse navbar-collapse" id="Menu">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#about" class="nav-item nav-link">About</a>
-                </li>
-                <li class="nav-item">
                     <a href="#videos" class="nav-item nav-link">Videos</a>
                 </li>
                 <li class="nav-item">
@@ -43,6 +40,9 @@
                 </li>
                 <li class="nav-item">
                     <a href="#university" class="nav-item nav-link">University</a>
+                </li>
+                <li class="nav-item">
+                    <a href="blog.html" class="nav-item nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a href="#contact" class="nav-item nav-link">Contact</a>
